--- a/API-CEP Project/src/css/style.css
+++ b/API-CEP Project/src/css/style.css
@@ -1,7 +1,41 @@
-body{
+* {
+    padding: 0;
+    margin: 0;
+}
+
+body {
     font-size: 1rem;
     font-family: Arial, Helvetica, sans-serif;
 }
-.container-principal{
+
+h1 {
+    text-align: center;
+    padding: 10px 15px;
+}
+
+.container-principal {
     display: flex;
+    margin: 0 auto;
+    width: 35%;
+    text-align: center;
+}
+
+.entrada {
+    width: 80%;
+}
+
+.button {
+    width: 20%;
+}
+
+.entrada input,
+.button button {
+    padding: 15px;
+    font-size: 1.1rem;
+    width: 100%;
+    
+}
+
+.respostaCep p {
+    padding: 10px;
 }
